--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
