--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
