--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "react-top-loading-bar": "^2.3.1",
+    "sweetalert2": "^11.12.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
